closeDialogDelete and styling
Added function to close the delete dialog when cancel is clicked, also added necessary event listeners. Also did some styling on buttons in the delete dialog.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
       <h1>Galop Galore</h1>
     </header>
-    <dialog open id="dialogDelete">
+    <dialog id="dialogDelete">
       <form action="" id="formDelete">
         <label for="inputPassword">Password:</label>
         <input
