added sorting menu html and function for sorting by age

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
   <body>
     <header>
       <h1>Galop Galore</h1>
+      <div id="dropdownSort">
+        <label for="sort-menu">Sort by:</label>
+        <select id="sort-menu">
+          <option value="name">Name</option>
+          <option value="age">Age</option>
+          <option value="score">Race</option>
+        </select>
+      </div>
     </header>
     <dialog id="dialogDelete">
       <form action="" id="formDelete">
